# horizon-sensu-panel

./: .gitignore  README.md  README.rst  setup.cfg  setup.py
doc/: Makefile  conf.py  index.rst
horizon_monitoring/: __init__.py  dashboard.py  models.py  views.py
horizon_monitoring/aggregates/: panel.py  tables.py  urls.py  views.py
horizon_monitoring/api/: __init__.py  base.py  sensu.py
horizon_monitoring/checks/: __init__.py  forms.py  panel.py  tables.py  urls.py  views.py
horizon_monitoring/clients/: __init__.py  managers.py  panel.py  tables.py  urls.py  views.py
horizon_monitoring/errors/: __init__.py  const.py  forms.py  formset.py  managers.py  models.py  panel.py  tables.py  urls.py  views.py  workflows.py
horizon_monitoring/events/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py  workflows.py
horizon_monitoring/info/: panel.py  tables.py  urls.py  views.py
horizon_monitoring/keys/: panel.py  tables.py  views.py
horizon_monitoring/projects/: panel.py  tables.py  urls.py  views.py
horizon_monitoring/stashes/: forms.py  panel.py  tables.py  urls.py  views.py
horizon_monitoring/templates/: base_fullscreen.html
horizon_monitoring/templates/horizon/: _accordion_nav.html
horizon_monitoring/templatetags/: tables.py  unit.py
horizon_monitoring/utils/: __init__.py  actions.py  api_client.py  filters.py  gitlab_client.py  kedb_client.py  request_util.py  sensu_client.py  settings.py  tables.py
horizon_monitoring/workarounds/: __init__.py  forms.py  managers.py  panel.py  tables.py  urls.py  views.py
(+39 files in other folders)
