[metadata]
name = horizon-sensu-dashboard
summary = Horizon panels integrating Sensu monitoring and Known Error Database
description-file =
    README.rst
author = Ales Komarek & Michael Kuty
author-email = mail@majklk.cz
home-page = https://github.com/tcpcloud/horizon-sensu-panel
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[files]
packages =
    horizon_monitoring
